# xinwenjuhe

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_event_center_pgvector.py  0003_source_scraper_verified_at.py  0004_event_chinese_fields.py
backend/app/: __init__.py  config.py  db.py  main.py
backend/app/api/: router.py
backend/app/core/: errors.py  rate_limit.py
backend/app/evaluation/: __init__.py  metrics.py
backend/app/models/: __init__.py  article.py  contradiction.py  credibility.py  discovered_source.py  event.py  fact_fragment.py  source.py
backend/app/schemas/: __init__.py  analysis.py  article.py  discovery.py  event.py  source.py
backend/tests/: test_active_source_ingestion.py  test_analyze_task_pipeline.py  test_analyzer_validation.py  test_api_collector.py  test_archive_service.py  test_collection_alerts.py  test_collection_quality.py  test_collector_concurrency.py  test_collector_registry.py  test_consensus_semantic.py  test_contradiction_detector.py  test_cursor_pagination.py  test_deduplicator.py  test_deepseek_provider.py  test_embedder.py  test_evaluation_metrics.py  test_event_clusterer.py  test_google_news_feeds.py  test_google_news_ingestion.py  test_llm_fallback.py  test_pipeline_triggering.py  test_project_contracts.py  test_seed_data.py  test_translation_service.py  test_trending_discovery.py  test_workflow_fixes.py
(+110 files in other folders)
