[tool.poetry]
name = "truthpuzzle-backend"
version = "0.1.0"
description = "FastAPI backend for TruthPuzzle multi-perspective news analysis"
authors = ["TruthPuzzle contributors"]
readme = "../README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
sqlalchemy = { extras = ["asyncio"], version = "^2.0.30" }
asyncpg = "^0.29.0"
alembic = "^1.13.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
python-dotenv = "^1.0.1"
feedparser = "^6.0.11"
trafilatura = "^1.9.0"
httpx = "^0.27.0"
redis = "^5.0.4"
celery = { extras = ["redis"], version = "^5.4.0" }
sentence-transformers = "^3.0.0"
pgvector = "^0.3.2"
numpy = "^1.26.4"
beautifulsoup4 = "^4.12.3"
scrapy = "^2.11.2"
playwright = "^1.45.0"
tenacity = "^8.3.0"
openai = "^1.35.0"
anthropic = "^0.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
httpx = "^0.27.0"
ruff = "^0.5.0"
testcontainers = { extras = ["postgresql"], version = "^4.8.0" }
locust = "^2.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
